--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <title>Webinator</title>
   </head>
   <body class="bg-slate-900 text-white px-56 py-16">
-    <header>
-      <h1 class="text-4xl">👋 Welcome!</h1>
+    <header class="flex flex-row items-baseline gap-5">
+      <h1 class="text-4xl">👋 Welcome back!</h1> 
+      <span class="text-2xl font-light">
+        Don't forget to take your coffee ☕️
+      </span>
     </header>
     <form
       action="https://www.google.com/search"
@@ -47,7 +50,7 @@
     </form>
     <div class="grid gap-4 grid-cols-2 my-8">
       <div class="bg-slate-600 p-3 rounded-lg max-h-96">
-        <h3 class="text-2xl">Todo</h3>
+        <h3 class="text-2xl">You have <span id="task-count">0</span> tasks today 😌</h3>
         <div class="mt-5 flex flex-row gap-2">
           <input
             class="w-full h-10 bg-transparent border-gray-500 border-2 p-2 rounded-lg outline-none placeholder-gray-500 text-md"
@@ -68,7 +71,7 @@
         ></div>
       </div>
       <div class="bg-slate-600 p-3 rounded-lg max-h-96">
-        <h3 class="text-2xl">Notes</h3>
+        <h3 class="text-2xl">Important notes are important 🤯</h3>
         <textarea
           id="notes"
           class="overflow-y-auto bg-transparent resize-y w-full border-gray-500 focus:border-2 focus:p-2 outline-none rounded-lg mt-5"
@@ -86,7 +89,7 @@
         &copy; Valeh Ismayilov 2023
       </div>
       <div>
-        <a href="https://vlhsmylv.github.io/browser-start-page" class="text-3xl" target="_blank">
+        <a href="https://github.com/vlhsmylv/browser-start-page" class="text-3xl hover:text-gray-100 ease-in-out duration-200" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
